# bigsnatch

./: .SRCINFO  .SRCINFO-bin  .gitignore  .stignore  Cargo.toml  Makefile  PKGBUILD  PKGBUILD-bin  README.md  error  install-debian.sh  install-deps.sh  release-debian.sh  release.sh
assets/: bigsnatch-dev.desktop  bigsnatch.desktop
docs/: RELEASING.md
proto/: snitchster.proto
snitchster-common/: Cargo.toml
snitchster-common/src/: lib.rs
snitchster-daemon/: Cargo.toml
snitchster-daemon/src/: dns_cache.rs  dns_parser.rs  ebpf_loader.rs  event_processor.rs  grpc_server.rs  main.rs  process_cache.rs
snitchster-ebpf/: Cargo.toml
snitchster-ebpf/src/: dns.rs  main.rs  tcp.rs  udp.rs
snitchster-gui/: Cargo.toml  build.rs
snitchster-gui/src/: app.rs  fonts.rs  main.rs  message.rs  subscription.rs  theme.rs
snitchster-gui/src/model/: connection.rs  destination.rs  mod.rs  process.rs
snitchster-gui/src/view/: connection_table.rs  detail_panel.rs  mod.rs  sidebar.rs  status_bar.rs  toolbar.rs
systemd/: snitchster-daemon.service
tools/: snatch-tail.py  snitchster_pb2.py  snitchster_pb2_grpc.py
