[package]
name = "snitchster-daemon"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = { workspace = true }

[dependencies]
snitchster-common = { path = "../snitchster-common", features = ["userspace"] }
aya = "0.13"
aya-log = "0.2"
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
lru = "0.12"
nix = { version = "0.29", features = ["user", "net", "socket"] }
hickory-proto = "0.25"
chrono = "0.4"
tokio-stream = "0.1"
async-stream = "0.3"
